smaller text to avoid being cut off

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
 	text-align: center;
 	color: #fff;
 	font-family: 'Bubbler One';
-	font-size: 4.5em;
+	font-size: 2.5em;
 	text-shadow: 0px 0px 5px #fff;
 }
 
